# empire-automation

./: .env.example  .gitignore  .renderignore  ALL_FIXES_APPLIED.md  API_SETUP_COMPLETE.md  AUDIT_REPORT.md  BACKEND_500_ERRORS.md  BACKEND_CORS_SETUP.md  BACKEND_NOT_RUNNING.md  BACKEND_STARTED.md  CLEAN_START.md  COMPLETION_SUMMARY.md  CONNECTION_COMPLETE.md  CONNECT_FRONTEND_BACKEND.md  CONNECT_NOW.md  CORS_FIX.md  CREDENTIALS_CHECKLIST.md  CREDENTIALS_CONFIGURED.md  CRITICAL_STEPS.md  DASHBOARD_COMPLETE.md  DASHBOARD_DYNAMIC_COMPLETE.md  DAY3_DAY4_COMPLETE.md  DAY_1_EXECUTION_GUIDE.md  DEBUG_FRONTEND_CONNECTION.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOY_ALL_NOW.md  DEPLOY_BACKEND_AND_CONNECT.md  DEPLOY_BACKEND_RAILWAY.md  DEPLOY_BACKEND_RAILWAY_NOW.md  DEPLOY_CHECKLIST.md  DEPLOY_NOW.md  DEPLOY_RENDER_NOW.md  DEPLOY_TO_FLY.md  DEPLOY_TO_RENDER.md  DEPLOY_TO_VERCEL.md  ERROR_FIXES_COMPLETE.md  FINAL_STARTUP_GUIDE.md  FINAL_STATUS.md  FIXES_APPLIED.md  (+59 more)
dashboard/: README.md  app.py
dashboard/pages/: __init__.py  agents.py  clients.py  financial.py  leads.py  ninety_day_plan.py  overview.py
docs/: GOOGLE_SHEETS_STRUCTURE.md
empire_automation/: __init__.py
empire_automation/agents/: __init__.py
empire_automation/api/: __init__.py  exceptions.py  main.py
frontend/: ERROR_FIXES.md  README.md  README_VERCEL.md  connect-backend.ps1  deploy.ps1  next.config.ts
knowledge/: business_plan.json  empire_textbook.md  service_pricing.json
tests/: test_complete_workflow.py  test_day_1_execution.py  test_google_integration.py  test_integrations.py
(+59 files in other folders)
